# LOKI

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  bibliography.bib  index.html  pyproject.toml  requirements.txt  run.py
assets/: deepseek[1]
configs/models/: claude_config.yaml  claude_gpt_config.yaml  claude_more_tokens.yaml  gemini.yaml  gemini_config.yaml  gemini_gpt_config.yaml  gpt-4o.yaml  gpt_config.yaml  gpt_mini_config.yaml  idefics.yaml  idefics_config.yaml  internvl2.yaml  internvl2_40b_config.yaml  internvl2_76b_config.yaml  internvl2_config.yaml  llama3_gpt_config.yaml  llama_3_vision_config.yaml  llava-next-video-hf.yaml  llava-next.yaml  llava_next_config.yaml  llava_next_interleave_config.yaml  llava_next_video_hf_config.yaml  llava_ov_72b_config.yaml  longva.yaml  longva_config.yaml  longvila_config.yaml  mantis.yaml  mantis_config.yaml  minicpm-v2.6.yaml  minicpm_v2.6_config.yaml  mistral_api_config.yaml  mplug-owl.yaml  mplug_owl_config.yaml  phi-3.5-vision.yaml  phi_3.5_vision_config.yaml  point_llm_config.yaml  qwen2_vl_72b_config.yaml  qwen2_vl_config.yaml  qwen_api_config.yaml  qwen_config.yaml  (+8 more)
configs/tasks/: synthbench-video.yaml  synthbench-visual.yaml  synthbench_visual_config.yaml
data/: combined_synthbench.json  synthbench_document_true_or_false.json  synthbench_image_detection.json  synthbench_image_detection_mini.json  synthbench_image_meta.json  synthbench_true_or_false.json  synthbench_video_detection.json  synthbench_video_meta.json  synthbench_video_meta_0917.json  synthbench_video_meta_0929.json  synthbench_video_multi_choice.json  synthbench_video_multi_choice_0917.json  synthbench_video_multi_choice_mini.json  synthbench_video_paired_up_meta.json  synthbench_video_paired_up_meta_0917.json  synthbench_video_paired_up_meta_0929.json  synthbench_video_true_or_false.json  synthbench_video_true_or_false_mini.json  two-option_multichoice(1).json  video_multi_choice_for_human.json  video_multi_choice_for_human_0917.json
data/3D/: 3D_detection.json  3D_detection_0917.json  3D_detection_0918.json  3D_detection_0923.json  3D_detection_for_humans.json  3D_detection_for_humans_0917.json  3D_detection_for_humans_0918.json  3D_detection_for_humans_0923.json  3D_detection_test_0919.json  3D_detection_test_0923.json  3D_detection_val_0919.json  3D_detection_val_0923.json  3D_mc_test_0919.json  3D_mc_test_0923.json  3D_mc_val_0919.json  3D_mc_val_0923.json  3D_multi_choice.json  3D_multi_choice_0917.json  3D_multi_choice_0918.json  3D_multi_choice_0923.json  3D_open_ended_qa.json  3D_open_ended_qa_mini.json  3D_point_tf.json  3D_point_tf_mini.json  3D_rgb_vqa.json  3D_tf_cot_val_0923.json  3D_tf_fs_0923.json  3D_tf_fs_test_0923.json  3D_tf_fs_val_0923.json  3D_tf_test_0919.json  3D_tf_test_0923.json  3D_tf_val_0919.json  3D_tf_val_0923.json  3D_true_or_false.json  3D_true_or_false_0917.json  3D_true_or_false_0918.json  3D_true_or_false_0923.json  3D_video_tf.json  3D_vqa.json
data/for_human/: 3D_detection_for_humans.json  doc_detection_for_human.json  image_detection_for_human.json  image_doc_detection_for_human.json  true_or_false_human.json  two_option_multichoice_human.json  video_detection_for_human.json  video_multi_choice_0917.json  video_multi_choice_0923.json  video_multi_choice_for_human.json  video_multi_choice_for_human_0923.json  video_multi_choice_for_human_0929.json  video_true_or_false_for_human.json  video_true_or_false_for_human_0917.json  video_true_or_false_for_human_0923.json
data/for_labeling/: rename_files_for_labeling.py  rename_mc_for_labeling.py
data/image/: combined_synthbench_model.json  image_detection_0904.json  image_detection_0912.json  image_detection_0918.json  image_detection_test_0919.json  image_detection_val_0919.json  image_detection_val_0922.json  image_mc_0918.json  image_mc_0922.json  image_mc_0927.json  image_mc_0930.json  image_mc_mini_0918.json  image_mc_test_0919.json  image_mc_test_0922.json  image_mc_val_0919.json  image_mc_val_0922.json  image_open_ended_vqa.json  image_open_ended_vqa_mini.json  image_regional_vqa_0909.json  image_tf_0918.json  image_tf_0922.json  image_tf_0927.json  image_tf_0930.json  image_tf_cot_val_0923.json  image_tf_fs_val_0923.json  image_tf_test_0919.json  image_tf_test_0922.json  image_tf_test_0_0922.json  image_tf_test_1_0922.json  image_tf_test_2_0922.json  image_tf_test_3_0922.json  image_tf_val_0919.json  image_tf_val_0922.json  image_vqa_0909.json  image_vqa_0929.json  image_vqa_add_no_option_0909.json  person_new_detection.json  scenes_new_detection.json
data/legacy/: synthbench_video.json  synthbench_video_mini.json  synthbench_video_new.json
data/text/: text_detection_classical.json  text_detection_mini.json  text_true_or_false.json
data/video/: video_detection.json  video_detection_0917.json  video_detection_0929.json  video_detection_test_0923.json  video_detection_test_0929.json  video_detection_test_internvl.json  video_detection_val_0923.json  video_detection_val_0929.json  video_mc_test_0923.json  video_mc_test_0929.json  video_mc_val_0923.json  video_mc_val_0929.json  video_multi_choice.json  video_multi_choice_0923.json  video_multi_choice_0929.json  video_multi_choice_for_human_0917.json  video_open_ended_qa.json  video_open_ended_qa_gpt.json  video_open_ended_qa_gpt_mini.json  video_open_ended_qa_mini.json  video_tf_test_0923.json  video_tf_test_0929.json  (+8 more)
lm_evaluate/: __init__.py  utils.py
scripts/: run_claude.sh  run_evals.sh  run_gemini.sh  run_gpt.sh  run_large_internvl2.sh  run_large_llava_qwen.sh  run_llama3_vision.sh  run_longva.sh  run_mantis.sh  run_models_3D.sh  run_models_image.sh  run_models_text.sh  run_models_video.sh  run_vila.sh  run_xcomposer2d5.sh
text_data/: Claude-3-5-generated.csv  GPT-4o-generated-new.csv  GPT-4o-generated.csv  GPT-4o-with-summary-new.csv  GPT-4o-with-summary.csv  GPT-4o.csv  GPT-4o.xlsx  Gemini-1.5-Pro-generated.csv  claude_generated.json  gemini_generated.json  gpt_generated.json  gpt_generated_new_prompt.json
tools/: calculate_stat.py  get_mini_data.py  test_gpt.py  test_mmmu_eval.py
(+185 files in other folders)
