[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lm_evaluate"
version = "0.0.1"
authors = [
    { name = "Baichuan Zhou", email = "zhoubaichuan@pjlab.org.cn" },
]
description = "An evaluation framework for synthetic multimodal data detection"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.urls]
Homepage = "https://opendatalab.github.io/LOKI/"
Repository = "https://github.com/opendatalab/LOKI"

requires-python = ">=3.9"

license = "MIT"

[tool.setuptools.packages.find]
include = ["lm_evaluate*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "notebooks*",
    "logs*",
]

