[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lm_evaluate"
version = "0.0.1"
authors = [
    { name = "Baichuan Zhou", email = "zhoubaichuan@pjlab.org.cn" },
]
description = "An evaluation framework for synthetic multimodal data detection"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.urls]
Homepage = "https://opendatalab.github.io/LOKI/"
Repository = "https://github.com/opendatalab/LOKI"

requires-python = ">=3.9"

license = "MIT"

dependencies = [
    accelerate==0.33.0
    aiohappyeyeballs==2.4.0
    aiohttp==3.10.5
    aiosignal==1.3.1
    annotated-types==0.7.0
    anyio==4.4.0
    asttokens==2.4.1
    async-timeout==4.0.3
    attrs==24.2.0
    av==12.3.0
    beautifulsoup4==4.12.3
    cachetools==5.5.0
    certifi==2024.7.4
    chardet==5.2.0
    charset-normalizer==3.3.2
    colorama==0.4.6
    DataProperty==1.0.1
    datasets==2.18.0
    decord==0.6.0
    dill==0.3.8
    distro==1.9.0
    einops==0.8.0
    exceptiongroup==1.2.2
    executing==2.0.1
    filelock==3.15.4
    frozenlist==1.4.1
    fsspec==2024.2.0
    google==3.0.0
    google-ai-generativelanguage==0.6.6
    google-api-core==2.19.1
    google-api-python-client==2.142.0
    google-auth==2.34.0
    google-auth-httplib2==0.2.0
    google-generativeai==0.7.2
    googleapis-common-protos==1.63.2
    grpcio==1.66.0
    grpcio-status==1.62.3
    h11==0.14.0
    httpcore==1.0.5
    httplib2==0.22.0
    httpx==0.27.0
    huggingface-hub==0.24.6
    icecream==2.1.3
    idna==3.7
    Jinja2==3.1.4
    jiter==0.5.0
    jsonlines==4.0.0
    loguru==0.7.2
    MarkupSafe==2.1.5
    mbstrdecoder==1.1.3
    mpmath==1.3.0
    multidict==6.0.5
    multiprocess==0.70.16
    networkx==3.3
    numpy==1.24.3
    openai==1.41.1
    packaging==24.1
    pandas==2.2.2
    pathvalidate==3.2.1
    pillow==10.4.0
    proto-plus==1.24.0
    protobuf==4.25.4
    psutil==6.0.0
    pyarrow==17.0.0
    pyarrow-hotfix==0.6
    pyasn1==0.6.0
    pyasn1_modules==0.4.0
    pybind11==2.13.4
    pydantic==2.8.2
    pydantic_core==2.20.1
    Pygments==2.18.0
    pyparsing==3.1.4
    pytablewriter==1.2.0
    python-dateutil==2.9.0.post0
    pytz==2024.1
    PyYAML==6.0.2
    regex==2024.7.24
    requests==2.32.3
    rsa==4.9
    safetensors==0.4.4
    sentencepiece==0.2.0
    six==1.16.0
    sniffio==1.3.1
    soupsieve==2.6
    sympy==1.13.2
    tabledata==1.3.3
    tcolorpy==0.1.6
    timm==1.0.8
    tokenizers==0.19.1
    torch==2.4.0
    torchaudio==2.4.0
    torchvision==0.19.0
    tqdm==4.66.5
    transformers==4.44.1
    triton==3.0.0
    typepy==1.3.2
    typing_extensions==4.12.2
    tzdata==2024.1
    uritemplate==4.1.1
    urllib3==2.2.2
    xxhash==3.5.0
    yarl==1.9.4
]

[tool.setuptools.packages.find]
include = ["lm_evaluate*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "notebooks*",
    "logs*",
]

